--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.46.1",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "19.0.0",
     "react-daisyui": "^5.0.5",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.53.2",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.9.1",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "daisyui": "^4.12.14",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
